# novomatic

./: README.md
task1/: CMakeLists.txt
task1/client/: Client.cpp  Client.hpp  CoinMachine.cpp  CoinMachine.hpp
task1/headers/: Ticket.hpp
task1/server/: Server.cpp  Server.hpp
task1/src/: main.cpp
task1/tests/: tests.cpp
task2/: CMakeLists.txt  input.json  output.json
task2/headers/: Constants.hpp  Graph.hpp  Node.hpp  Render.h
task2/src/: Graph.cpp  Render.cpp  main.cpp
task2/tests/: tests.cpp
task3/: CMakeLists.txt  logs.txt  test.txt
task3/headers/: MessageTemplate.hpp  QueryFilter.hpp
task3/src/: main.cpp
task3/tests/: tests.cpp
task3/utils/: Utilities.cpp  Utilities.hpp
